--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
   "name": "fp-utils",
   "version": "0.0.1",
   "description": "FP utilities for projects in Typescript",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/cjs/index.d.ts",
   "author": "Alex Sobolev",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json"
+  },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^3.0.0",
-    "rollup": "^1.32.0",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
     "typescript": "^3.8.3"
-  }
+  },
+  "dependencies": {}
 }
