--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,9 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "tsconfigRootDir": "./",
+    "project": "tsconfig.esm.json"
   },
   "rules": {},
   "extends": [
