--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "author": "Alex Sobolev",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json"
+    "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json",
+    "lint": "eslint --fix src/**/*",
+    "prettier:check": "prettier --list-different \"src/**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"src/**/*.{ts,tsx}\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.21.0",
@@ -19,6 +27,8 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   },
