--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,12 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "lib": ["es6", "dom"],
+    "module": "commonjs",
+    "moduleResolution": "node",
     "removeComments": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "target": "es5"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
