--- a/package.json
+++ b/package.json
@@ -14,22 +14,28 @@
     "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json",
     "lint": "eslint --fix src/**/*",
     "prettier:check": "prettier --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "prettier --write \"src/**/*.{ts,tsx}\""
+    "prettier:write": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "jest --bail"
     }
   },
   "devDependencies": {
+    "@types/jest": "^25.1.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-jest": "^23.8.1",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
+    "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {}
