--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -6,5 +6,6 @@
     "outDir": "./dist/esm",
     "sourceMap": false,
     "target": "es6"
-  }
+  },
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
